--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">testApplication</string>
-    <string name="hello_world">String</string>
+    <string name="app_name">UserProfile</string>
 </resources>
